Fix background on safari

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -143,6 +143,9 @@ body {
     
     .modular-item {
         background-attachment: fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
         background-size: cover;
         background-position: center;
         //padding: 100px;
